img source resolve

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,7 +7,7 @@ xl:flex-row
 >
     <div class="flex items-center justify-center 2xl:w-[35%] 2xl:justify-end hiddenLeft">
         <img
-            src="/public/weblogo.jpg"
+            src="/weblogo.jpg"
             class="w-[90%] sm:w-[70%] lg:w-[90%] 2xl:w-[55%]"
             alt="weblogo"
         />
