--- a/src/components/techs.astro
+++ b/src/components/techs.astro
@@ -17,7 +17,7 @@
             class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/public/techs/canva.svg"
+                src="/techs/canva.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="canva icon"
             />
@@ -26,7 +26,7 @@
             class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/public/techs/git.svg"
+                src="/techs/git.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="git icon"
             />
@@ -35,7 +35,7 @@
             class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/public/techs/github-dark.svg"
+                src="/techs/github-dark.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="github icon"
             />
@@ -44,7 +44,7 @@
             class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/public/techs/vscode.svg"
+                src="/techs/vscode.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="vscode icon"
             />
@@ -53,7 +53,7 @@
             class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/public/techs/windows.svg"
+                src="/techs/windows.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="windows icon"
             />
@@ -62,7 +62,7 @@
             class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/public/languajes/astro_dark.svg"
+                src="/languajes/astro_dark.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="astro icon"
             />
@@ -71,7 +71,7 @@
             class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/public/languajes/css.svg"
+                src="/languajes/css.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="css icon"
             />
@@ -80,7 +80,7 @@
             class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/public/languajes/html5.svg"
+                src="/languajes/html5.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="html icon"
             />
@@ -89,7 +89,7 @@
             class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/public/languajes/javascript.svg"
+                src="/languajes/javascript.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="js icon"
             />
@@ -98,7 +98,7 @@
             class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/public/languajes/sass.svg"
+                src="/languajes/sass.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="astro icon"
             />
@@ -126,17 +126,17 @@
             <span class="text-white/80 mx-3 text-xs xl:text-md">Made With</span>
             <div class="flex">
                 <img
-                    src="/public/languajes/astro_dark.svg"
+                    src="/languajes/astro_dark.svg"
                     class="w-5 mx-2 xl:w-5"
                     alt="astro icon"
                 />
                 <img
-                    src="/public/techs/tailwindcss.svg"
+                    src="/techs/tailwindcss.svg"
                     class="w-5 mx-2 xl:w-5"
                     alt="tailwind icon"
                 />
                 <img
-                    src="/public/languajes/javascript.svg"
+                    src="/languajes/javascript.svg"
                     class="w-5 mx-2 xl:w-5"
                     alt="js icon"
                 />
