--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="description" content="FrontEnd Web Portfolio" /></head
+		
 	>
+	<link rel="stylesheet" href="../styles.css">
 	<title>AdolfoZv</title>
 	<link
 		rel="stylesheet"
