styles.css delete, & add global.css

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -36,7 +36,7 @@ import SassIcon from "./svg/SassIcon.astro";
                         class="fa-solid fa-arrow-up-right-from-square text-3xl text-white/80 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
                     ></i>
                 </a>
-                <img src="/project1-mockup.jpg" class="" alt="" />
+                <img src="/public/project1-mockup.jpg" class="" alt="" />
             </div>
         </div>
         <div class="project w-70 sm:w-100 xl:w-135 2xl:w-120 hiddenRight">
@@ -63,7 +63,7 @@ import SassIcon from "./svg/SassIcon.astro";
                         class="fa-solid fa-arrow-up-right-from-square text-3xl text-white/80 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
                     ></i>
                 </a>
-                <img src="/project2-mockup.jpg" class="" alt="" />
+                <img src="/public/project2-mockup.jpg" class="" alt="" />
             </div>
         </div>
         <div class="project w-70 sm:w-100 xl:w-135 2xl:w-120 hiddenLeft">
@@ -90,7 +90,7 @@ import SassIcon from "./svg/SassIcon.astro";
                         class="fa-solid fa-arrow-up-right-from-square text-3xl text-white/80 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
                     ></i>
                 </a>
-                <img src="/project3-mockup.jpg" class="" alt="" />
+                <img src="/public/project3-mockup.jpg" class="" alt="" />
             </div>
         </div>
         <div class="project w-70 sm:w-100 xl:w-135 2xl:w-120 hiddenRight">
@@ -117,7 +117,7 @@ import SassIcon from "./svg/SassIcon.astro";
                         class="fa-solid fa-arrow-up-right-from-square text-3xl text-white/80 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
                     ></i>
                 </a>
-                <img src="/project4-mockup.jpg" class="" alt="" />
+                <img src="/public/project4-mockup.jpg" class="" alt="" />
             </div>
         </div>
     </div>
