--- a/src/components/techs.astro
+++ b/src/components/techs.astro
@@ -14,91 +14,91 @@
         2xl:w-[50%] 2xl:px-10 2xl:gap-6 2xl:h-[50%]"
     >
         <div
-            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
+            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-md duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/techs/canva.svg"
+                src="/public/techs/canva.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="canva icon"
             />
         </div>
         <div
-            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
+            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-md duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/techs/git.svg"
+                src="/public/techs/git.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="git icon"
             />
         </div>
         <div
-            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
+            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-md duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/techs/github-dark.svg"
+                src="/public/techs/github-dark.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="github icon"
             />
         </div>
         <div
-            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
+            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-md duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/techs/vscode.svg"
+                src="/public/techs/vscode.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="vscode icon"
             />
         </div>
         <div
-            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
+            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-md duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/techs/windows.svg"
+                src="/public/techs/windows.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="windows icon"
             />
         </div>
         <div
-            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
+            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-md duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/languajes/astro_dark.svg"
+                src="/public/languajes/astro_dark.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="astro icon"
             />
         </div>
         <div
-            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
+            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-md duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/languajes/css.svg"
+                src="/public/languajes/css.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="css icon"
             />
         </div>
         <div
-            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
+            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-md duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/languajes/html5.svg"
+                src="/public/languajes/html5.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="html icon"
             />
         </div>
         <div
-            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
+            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-md duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/languajes/javascript.svg"
+                src="/public/languajes/javascript.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="js icon"
             />
         </div>
         <div
-            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-sm duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
+            class="hover:shadow-[0_20px_50px_rgba(8,_112,_184,_0.7)] ease-linear rounded-md duration-100 w-[120px] h-[120px] 2xl:w-[130px] 2xl:h-[130px] flex items-center justify-center hiddenUp"
         >
             <img
-                src="/languajes/sass.svg"
+                src="/public/languajes/sass.svg"
                 class="w-11 md:w-20 2xl:w-15"
                 alt="astro icon"
             />
@@ -126,17 +126,17 @@
             <span class="text-white/80 mx-3 text-xs xl:text-md">Made With</span>
             <div class="flex">
                 <img
-                    src="/languajes/astro_dark.svg"
+                    src="/public/languajes/astro_dark.svg"
                     class="w-5 mx-2 xl:w-5"
                     alt="astro icon"
                 />
                 <img
-                    src="/techs/tailwindcss.svg"
+                    src="/public/techs/tailwindcss.svg"
                     class="w-5 mx-2 xl:w-5"
                     alt="tailwind icon"
                 />
                 <img
-                    src="/languajes/javascript.svg"
+                    src="/public/languajes/javascript.svg"
                     class="w-5 mx-2 xl:w-5"
                     alt="js icon"
                 />
