--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,19 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="description" content="FrontEnd Web Portfolio" /></head
-		
-	>
-	<link rel="stylesheet" href="../styles.css">
-	<title>AdolfoZv</title>
-	<link
-		rel="stylesheet"
-		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-		integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-		crossorigin="anonymous"
-		referrerpolicy="no-referrer"
-	/>
-	<script src="/src/js/script.js" defer></script>
+		<meta name="description" content="FrontEnd Web Portfolio" /><title>
+			AdolfoZv
+		</title><link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+			integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/><script src="/src/js/script.js" defer></script>
+		<link rel="stylesheet" href="/src/styles/global.css" />
+	</head>
 
 	<body>
 		<slot />
