--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@
 >
     <div class="">
         <img
-            src="../img1.jpg"
+            src="/img1.jpg"
             class="rounded-full w-[250px] h-[250px] shadow-lg shadow-white/20
             lg:w-[300px] lg:h-[300px]
             xl:h-[380px] xl:w-[380px]
