--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -24,7 +24,7 @@ import SassIcon from "./svg/SassIcon.astro";
             </div>
             <div
                 class="project__project rounded-md rounded-tl-none overflow-hidden relative
-            shadow-lg shadow-white/10 group"
+           shadow-2xl shadow-blue-500/20 border border-blue-950/30 group"
             >
                 <a
                     aria-label="link to project"
@@ -36,7 +36,7 @@ import SassIcon from "./svg/SassIcon.astro";
                         class="fa-solid fa-arrow-up-right-from-square text-3xl text-white/80 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
                     ></i>
                 </a>
-                <img src="/project1-mockup.jpg" class="" alt="" />
+                <img src="/mockup1.png" class="" alt="" />
             </div>
         </div>
         <div class="project w-70 sm:w-100 xl:w-135 2xl:w-120 hiddenRight">
@@ -51,7 +51,7 @@ import SassIcon from "./svg/SassIcon.astro";
             </div>
             <div
                 class="project__project rounded-md rounded-tl-none overflow-hidden relative
-            shadow-lg shadow-white/10 group"
+           shadow-2xl shadow-blue-500/20 border border-blue-950/30 group"
             >
                 <a
                     aria-label="link to project"
@@ -63,7 +63,7 @@ import SassIcon from "./svg/SassIcon.astro";
                         class="fa-solid fa-arrow-up-right-from-square text-3xl text-white/80 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
                     ></i>
                 </a>
-                <img src="/project2-mockup.jpg" class="" alt="" />
+                <img src="/mockup3.png" class="" alt="" />
             </div>
         </div>
         <div class="project w-70 sm:w-100 xl:w-135 2xl:w-120 hiddenLeft">
@@ -78,7 +78,7 @@ import SassIcon from "./svg/SassIcon.astro";
             </div>
             <div
                 class="project__project rounded-md rounded-tl-none overflow-hidden relative
-            shadow-lg shadow-white/10 group"
+           shadow-2xl shadow-blue-500/20 border border-blue-950/30 group"
             >
                 <a
                     aria-label="link to project"
@@ -90,7 +90,7 @@ import SassIcon from "./svg/SassIcon.astro";
                         class="fa-solid fa-arrow-up-right-from-square text-3xl text-white/80 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
                     ></i>
                 </a>
-                <img src="/project3-mockup.jpg" class="" alt="" />
+                <img src="/mockup4.png" class="" alt="" />
             </div>
         </div>
         <div class="project w-70 sm:w-100 xl:w-135 2xl:w-120 hiddenRight">
@@ -99,17 +99,17 @@ import SassIcon from "./svg/SassIcon.astro";
             >
                 <div class="languag flex gap-3">
                     <HtmlIcon />
-                    <CssIcon />
+                    <SassIcon />
                     <JsIcon />
                 </div>
             </div>
             <div
                 class="project__project rounded-md rounded-tl-none overflow-hidden relative
-            shadow-lg shadow-white/10 group"
+           shadow-2xl shadow-blue-500/20 border border-blue-950/30 group"
             >
                 <a
                     aria-label="link to project"
-                    href="https://adolfin07.github.io/VictorBurger/"
+                    href="https://adolfin07.github.io/Lawler-s/"
                     target="_blanks"
                     class="absolute w-full h-full flex justify-center items-center hover:bg-black/50 ease-linear duration-200"
                 >
@@ -117,7 +117,7 @@ import SassIcon from "./svg/SassIcon.astro";
                         class="fa-solid fa-arrow-up-right-from-square text-3xl text-white/80 opacity-0 group-hover:opacity-100 transition-opacity duration-200"
                     ></i>
                 </a>
-                <img src="/project4-mockup.jpg" class="" alt="" />
+                <img src="/mockup2.png" class="" alt="" />
             </div>
         </div>
     </div>
