--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -3,6 +3,8 @@ import HtmlIcon from "./svg/htmlIcon.astro";
 import CssIcon from "./svg/cssIcon.astro";
 import JsIcon from "./svg/JavascriptIcon.astro";
 import SassIcon from "./svg/SassIcon.astro";
+import TailwindIconn from "./svg/TailwindIconn.astro";
+import IconAstro from "../assets/astro.svg";
 ---
 
 <section id="projects" class="py-10">
@@ -71,8 +73,16 @@ import SassIcon from "./svg/SassIcon.astro";
                 class="project__top bg-black/50 w-50 py-2 px-3 rounded-t-md shadow-lg shadow-white/20"
             >
                 <div class="languag flex gap-3">
-                    <HtmlIcon />
-                    <CssIcon />
+                    <img
+                        src="/languajes/astro_dark.svg"
+                        class="w-5 xl:w-5 m-0"
+                        alt="astro icon"
+                    />
+                    <img
+                        src="/techs/tailwindcss.svg"
+                        class="w-5 xl:w-5"
+                        alt="tailwind icon"
+                    />
                     <JsIcon />
                 </div>
             </div>
@@ -82,7 +92,7 @@ import SassIcon from "./svg/SassIcon.astro";
             >
                 <a
                     aria-label="link to project"
-                    href="https://adolfin07.github.io/ReivajCell/"
+                    href="https://github.com/adolfin07/LoopStudio"
                     target="_blank"
                     class="absolute w-full h-full flex justify-center items-center hover:bg-black/50 ease-linear duration-200"
                 >
